; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/lwip/test/unit/tcp/extr_tcp_helper.c_tcp_remove_all.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/lwip/test/unit/tcp/extr_tcp_helper.c_tcp_remove_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }

@tcp_listen_pcbs = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@tcp_active_pcbs = common dso_local global i32 0, align 4
@tcp_tw_pcbs = common dso_local global i32 0, align 4
@lwip_stats = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@MEMP_TCP_PCB = common dso_local global i64 0, align 8
@MEMP_TCP_PCB_LISTEN = common dso_local global i64 0, align 8
@MEMP_TCP_SEG = common dso_local global i64 0, align 8
@MEMP_PBUF_POOL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcp_remove_all() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @tcp_listen_pcbs, i32 0, i32 0), align 4
  %2 = call i32 @tcp_remove(i32 %1)
  %3 = load i32, i32* @tcp_active_pcbs, align 4
  %4 = call i32 @tcp_remove(i32 %3)
  %5 = load i32, i32* @tcp_tw_pcbs, align 4
  %6 = call i32 @tcp_remove(i32 %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @lwip_stats, i32 0, i32 0), align 8
  %8 = load i64, i64* @MEMP_TCP_PCB, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp eq i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @fail_unless(i32 %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @lwip_stats, i32 0, i32 0), align 8
  %16 = load i64, i64* @MEMP_TCP_PCB_LISTEN, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @fail_unless(i32 %21)
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @lwip_stats, i32 0, i32 0), align 8
  %24 = load i64, i64* @MEMP_TCP_SEG, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp eq i64 %27, 0
  %29 = zext i1 %28 to i32
  %30 = call i32 @fail_unless(i32 %29)
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @lwip_stats, i32 0, i32 0), align 8
  %32 = load i64, i64* @MEMP_PBUF_POOL, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp eq i64 %35, 0
  %37 = zext i1 %36 to i32
  %38 = call i32 @fail_unless(i32 %37)
  ret void
}

declare dso_local i32 @tcp_remove(i32) #1

declare dso_local i32 @fail_unless(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
